# kdl-visit

./: Cargo.toml
.github/workflows/: rust.yml
scripts/: list-todo.nu
src/: error.rs  lib.rs  span.rs  utils.rs  visit.rs
src/ast/: ann.rs  attr.rs  collect.rs  details.rs  document.rs  into_owned.rs  mod.rs  node.rs  nodes.rs  value.rs  values.rs
src/components/: identifier.rs  mod.rs  number.rs  string.rs  value.rs
src/error/: many.rs  mod.rs  one.rs
src/parse/: error.rs  expected.rs  lexer.rs  mod.rs  slashdash.rs  strings.rs  visit.rs
src/visit/: helpers.rs  mod.rs  slashdash.rs  terminals.rs
tests/: corpus.rs
tests/corpus/: 009.kdl  016.kdl  019.kdl  020.kdl  021.kdl  022.kdl  error_escaped_content.kdl  error_escaped_eof.kdl  error_invalid_escape.kdl  error_missing_value.kdl  error_number_out_of_range.kdl  error_unclosed_raw_string.kdl  error_unquoted_value.kdl  error_value_as_property_key.kdl  error_whitespace_after_type.kdl  error_whitespace_before_argument.kdl  error_whitespace_before_property.kdl  error_whitespace_in_property.kdl  error_whitespace_in_type.kdl
tests/examples/: error_bare_value.stderr  error_escaped_content.stderr  error_escaped_eof.stderr  error_invalid_escape.stderr  error_missing_value.stderr  error_number_out_of_range.stderr  error_unclosed_raw_string.stderr  error_unclosed_string.stderr  error_unquoted_value.stderr  error_value_as_property_key.stderr  error_whitespace_after_type.stderr  error_whitespace_before_argument.stderr  error_whitespace_before_property.stderr  error_whitespace_in_property.stderr  error_whitespace_in_type.stderr
tests/snapshots/: corpus__ast@000.kdl.snap  corpus__ast@001.kdl.snap  corpus__ast@002.kdl.snap  corpus__ast@003.kdl.snap  corpus__ast@004.kdl.snap  corpus__ast@005.kdl.snap  corpus__ast@006.kdl.snap  corpus__ast@007.kdl.snap  corpus__ast@008.kdl.snap  corpus__ast@009.kdl.snap  corpus__ast@010.kdl.snap  corpus__ast@011.kdl.snap  corpus__ast@012.kdl.snap  corpus__ast@013.kdl.snap  corpus__ast@014.kdl.snap  corpus__ast@015.kdl.snap  corpus__ast@017.kdl.snap  corpus__ast@019.kdl.snap  corpus__ast@020.kdl.snap  corpus__ast@021.kdl.snap  corpus__ast@error_number_out_of_range.kdl.snap  corpus__diagnostic@009.kdl.snap  corpus__diagnostic@016.kdl.snap  corpus__diagnostic@018.kdl.snap  corpus__diagnostic@022.kdl.snap  corpus__diagnostic@error_bare_value.kdl.snap  corpus__diagnostic@error_escaped_content.kdl.snap  corpus__diagnostic@error_escaped_eof.kdl.snap  corpus__diagnostic@error_invalid_escape.kdl.snap  corpus__diagnostic@error_missing_value.kdl.snap  corpus__diagnostic@error_number_out_of_range.kdl.snap  corpus__diagnostic@error_unclosed_raw_string.kdl.snap  corpus__diagnostic@error_unclosed_string.kdl.snap  corpus__diagnostic@error_unquoted_value.kdl.snap  corpus__diagnostic@error_value_as_property_key.kdl.snap  corpus__diagnostic@error_whitespace_after_type.kdl.snap  corpus__diagnostic@error_whitespace_before_argument.kdl.snap  corpus__diagnostic@error_whitespace_before_property.kdl.snap  (+40 more)
