[package]
name = "kdl-parser"
version = "0.1.0"
edition = "2021"

[lib]
name = "kdl"

[[test]]
name = "corpus"
required-features = ["miette", "miette/fancy"]

[features]
std = []
miette = ["dep:miette", "std"]

[dependencies]
logos = { version = "0.12.1", default-features = false, features = ["export_derive"] }
miette = { version = "5.3.0", default-features = false, optional = true }
ref-cast = "1.0.9"
rust_decimal = { version = "1.26.1", default-features = false }
sptr = "0.3.2"

[dev-dependencies]
insta = { version = "1.18.2", default-features = false, features = ["colors", "glob"] }
miette = { version = "5.3.0", features = ["fancy"] }

[profile.dev.package]
insta = { opt-level = 3 }
similar = { opt-level = 3 }
