[package]
name = "kdl-parser"
version = "0.1.0"
edition = "2021"

[features]
std = ["alloc"]
alloc = []

decimal = ["dep:rust_decimal"]
lexical = ["dep:lexical-core"]
miette = ["dep:miette", "std"]

[dependencies]
lexical-core = { version = "0.8.5", default-features = false, features = ["parse-floats", "parse-integers", "power-of-two", "format"], optional = true }
logos = { version = "0.12.1", default-features = false, features = ["export_derive"] }
miette = { version = "5.3.0", default-features = false, optional = true }
ref-cast = "1.0.9"
rust_decimal = { version = "1.26.1", default-features = false, optional = true }
sptr = "0.3.2"
tracing = { version = "0.1.36", default-features = false, features = ["attributes"], optional = true }

[dev-dependencies]
insta = { version = "1.18.2", default-features = false, features = ["colors", "glob"] }
miette = { version = "5.3.0", features = ["fancy"] }

[profile.dev.package]
insta = { opt-level = 3 }
similar = { opt-level = 3 }
