[package]
name = "kdl-visit"
version = "0.1.0"
edition = "2021"

[features]
std = ["alloc"]
alloc = []

decimal = ["dep:rust_decimal"]
lexical = ["dep:lexical-core"]
miette = ["dep:miette", "std"]

[dependencies]
displaydoc = { version = "0.2.3", default-features = false }
lexical-core = { version = "0.8.5", default-features = false, features = ["parse-floats", "parse-integers", "power-of-two", "format"], optional = true }
logos = { version = "0.12.1", default-features = false, features = ["export_derive"] }
miette = { version = "5.3.0", default-features = false, optional = true }
ref-cast = "1.0.9"
rust_decimal = { version = "1.26.1", default-features = false, optional = true }
scopeguard = { version = "1.1.0", default-features = false }
sptr = "0.3.2"
tracing = { version = "0.1.36", default-features = false, features = ["attributes"], optional = true }

[dev-dependencies]
insta = { version = "1.19.0", default-features = false, features = ["colors", "glob", "filters"] }
miette = { version = "5.3.0", features = ["fancy"] }
tracing-subscriber = { version = "0.3.15", features = ["registry"] }
tracing-tree = "0.2.1"

[profile.dev.package]
insta = { opt-level = 3 }
similar = { opt-level = 3 }
